--- a/design.css
+++ b/design.css
@@ -10,10 +10,10 @@ html, body {
 
 body {
     background-image: url(pic/Logo2.png);
-    background-size: contain;*/
+    background-size: contain;
     background-position: top;
     background-repeat: no-repeat;
-    color: #ffffff;
+    color: lightseagreen;
 
 }
 
