--- a/design.css
+++ b/design.css
@@ -9,11 +9,11 @@ html, body {
 }
 
 body {
-    background-image: url(pic/Logo2.png);
-    background-size: contain;
+    /*background-image: url(pic/Logo2.png);
+    /*background-size: contain;*/
     background-position: top;
     background-repeat: no-repeat;
-    color: lightseagreen;
+    color: #ffffff;
 
 }
 
@@ -159,7 +159,6 @@ body {
     box-shadow: 1px 1px 10px black;
     border: 1px solid #fff;
     font-family: Arial, Helvetica, sans-serif;
-	z-index:-1;
 }
 
 /*сообщение о результате теста на последнем листе END и во втором окне авторизации INTER*/
