--- a/Style.css
+++ b/Style.css
@@ -130,7 +130,7 @@ h3:last-child {
     font-size: 20px;
     z-index: 0;
     padding-top: 15px;
-    max-height: 800px;
+    /*max-height: 800px;*/
     overflow: hidden;
     text-overflow: ellipsis;
     -o-text-overflow: ellipsis;
